# appscriptz

./: index.html  main.py  pyproject.toml
src/appscriptz/: __init__.py  core.py  log.py  main.py
src/appscriptz.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/appscriptz/aiworker/: anpei.py  api.py  api_chat_kimi.py  error.py  kimi_cookies.json  kimi_product.py
src/appscriptz/scripts/: aifunc.py  applescript.py  pypeteer.py
tests/: test_1.py  test_core.py
