[project]
name = "appscriptz"
version = "1.0.2"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [ "llama-index>=0.12.36", "llmada>=0.1.11", "promptlibz==0.2.10", "pytest>=8.3.5", "toml>=0.10.2",]

[tool.pytest.ini_options]
testpaths = [ "tests",]
pythonpath = [ "src",]
