[project]
name = "appscriptz"
version = "1.0.5"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [ "llmada==1.0.3", "promptlibz==1.0.2", "pytest>=8.3.5", "toml==0.10.2",]

[tool.pytest.ini_options]
testpaths = [ "tests",]
pythonpath = [ "src",]
